[gd_scene load_steps=3 format=3 uid="uid://cqpby5jyv71l0"]

[ext_resource type="Script" uid="uid://dgb4blornaq38" path="res://addons/gaea/graph/components/slot.gd" id="1_ro1nl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dkx48"]

[node name="Slot" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 15.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 10
script = ExtResource("1_ro1nl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="LeftLabel" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_dkx48")
bbcode_enabled = true
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="RightLabel" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_dkx48")
bbcode_enabled = true
fit_content = true
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 1

[node name="TogglePreviewButton" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
stretch_mode = 3
